# openthread

./: CMakeLists.txt
openthread_port/: CMakeLists.txt
openthread_port/crypto/: aes_alt.c  ecjpake_alt.c  sha256_alt.c
openthread_port/include/: aes_alt.h  ecjpake_alt.h  sha256_alt.h
openthread_port/ncp/: ncp.c  ncp_cpc.cpp  ncp_cpc.hpp
openthread_port/src/: ot_alarm.c  ot_crypto.c  ot_entropy.c  ot_freertos.c  ot_logging.c  ot_misc.c  ot_ota_handler.c  ot_radio.c  ot_uart.c
