message("\t+ thread")

set(CMAKE_BUILD_TYPE Debug)
set(OT_PLATFORM "external" CACHE STRING "")
option(OT_BUILD_EXECUTABLES "" OFF)
option(BUILD_TESTING "" OFF)

sdk_add_include_directories(
    ${CMAKE_CURRENT_LIST_DIR}/openthread/include/openthread
    ${CMAKE_CURRENT_LIST_DIR}/openthread/include/openthread/platform
    ${CMAKE_CURRENT_LIST_DIR}/openthread/src/core
    ${CMAKE_CURRENT_LIST_DIR}/openthread/src/core/config
    ${CMAKE_CURRENT_LIST_DIR}/openthread/src
    ${CMAKE_CURRENT_LIST_DIR}/openthread/src/include
    ${CMAKE_CURRENT_LIST_DIR}/openthread_port/include
    ${CMAKE_CURRENT_LIST_DIR}/openthread/examples/config/
)

set(OT_PACKAGE_NAME "OPENTHREAD" CACHE STRING "OpenThread Package Name")
set(OT_PACKAGE_VERSION "baf13fc99" CACHE STRING "OpenThread Package Version")

# mebtls configuration
add_compile_options(
    -I${CMAKE_CURRENT_LIST_DIR}/openthread_port/include
    -I${CMAKE_CURRENT_LIST_DIR}/openthread/third_party/mbedtls/repo/include
    -DMBEDTLS_AES_ALT=1
    -DMBEDTLS_SHA256_ALT=1
    -DMBEDTLS_ECJPAKE_ALT=1
    # -DMBEDTLS_DEBUG_C=1
)

# OpenThread configuration
if(CONFIG_OT_DEVICE_TYPE_FTD)
    sdk_add_link_libraries(openthread-ftd)
    sdk_add_link_libraries(openthread-cli-ftd)
    option(OT_FTD "" ON)
    option(OT_MTD "" OFF)
    option(OT_RCP "" OFF)
    add_compile_options(
        -DOPENTHREAD_CONFIG_ASSERT_ENABLE=1
        -DOPENTHREAD_CONFIG_BACKBONE_ROUTER_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_AGENT_ENABLE=1
        -DOPENTHREAD_CONFIG_BORDER_AGENT_ID_ENABLE=1
        -DOPENTHREAD_CONFIG_BORDER_AGENT_EPHEMERAL_KEY_ENABLE=1
        -DOPENTHREAD_CONFIG_BORDER_ROUTER_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_ROUTING_DHCP6_PD_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_ROUTING_ENABLE=0
        -DOPENTHREAD_CONFIG_CHANNEL_MANAGER_ENABLE=1
        -DOPENTHREAD_CONFIG_CHANNEL_MONITOR_ENABLE=1
        -DOPENTHREAD_CONFIG_COAP_API_ENABLE=1
        -DOPENTHREAD_CONFIG_COAP_BLOCKWISE_TRANSFER_ENABLE=0
        -DOPENTHREAD_CONFIG_COAP_OBSERVE_API_ENABLE=0
        -DOPENTHREAD_CONFIG_COAP_SECURE_API_ENABLE=1
        -DOPENTHREAD_CONFIG_COMMISSIONER_ENABLE=1
        -DOPENTHREAD_CONFIG_DATASET_UPDATER_ENABLE=1
        -DOPENTHREAD_CONFIG_DHCP6_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_DHCP6_SERVER_ENABLE=1
        -DOPENTHREAD_CONFIG_DIAG_ENABLE=0               # modified
        -DOPENTHREAD_CONFIG_DNSSD_SERVER_ENABLE=0
        -DOPENTHREAD_CONFIG_DNS_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_DNS_DSO_ENABLE=0
        -DOPENTHREAD_CONFIG_DNS_UPSTREAM_QUERY_ENABLE=0
        -DOPENTHREAD_CONFIG_DUA_ENABLE=1
        -DOPENTHREAD_CONFIG_ECDSA_ENABLE=1
        -DOPENTHREAD_CONFIG_HISTORY_TRACKER_ENABLE=0
        -DOPENTHREAD_CONFIG_IP6_BR_COUNTERS_ENABLE=0
        -DOPENTHREAD_CONFIG_IP6_SLAAC_ENABLE=1
        -DOPENTHREAD_CONFIG_JAM_DETECTION_ENABLE=1
        -DOPENTHREAD_CONFIG_JOINER_ENABLE=1
        -DOPENTHREAD_CONFIG_LINK_METRICS_MANAGER_ENABLE=1
        -DOPENTHREAD_CONFIG_LINK_RAW_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_CSL_TRANSMITTER_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_CSL_RECEIVER_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_FILTER_ENABLE=1
        -DOPENTHREAD_CONFIG_MESH_DIAG_ENABLE=1
        -DOPENTHREAD_CONFIG_MESSAGE_USE_HEAP_ENABLE=0   # modified
        -DOPENTHREAD_CONFIG_MLE_DEVICE_PROPERTY_LEADER_WEIGHT_ENABLE=1
        -DOPENTHREAD_CONFIG_MLE_LINK_METRICS_INITIATOR_ENABLE=1
        -DOPENTHREAD_CONFIG_MLE_LINK_METRICS_SUBJECT_ENABLE=1
        -DOPENTHREAD_CONFIG_MLR_ENABLE=1
        -DOPENTHREAD_CONFIG_MULTIPLE_INSTANCE_ENABLE=0
        -DOPENTHREAD_CONFIG_NAT64_BORDER_ROUTING_ENABLE=0
        -DOPENTHREAD_CONFIG_NAT64_TRANSLATOR_ENABLE=0
        -DOPENTHREAD_CONFIG_NETDATA_PUBLISHER_ENABLE=0
        -DOPENTHREAD_CONFIG_PING_SENDER_ENABLE=1
        -DOPENTHREAD_CONFIG_SNTP_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_SRP_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_SRP_SERVER_ENABLE=0
        -DOPENTHREAD_CONFIG_TIME_SYNC_ENABLE=0
        -DOPENTHREAD_CONFIG_TMF_ANYCAST_LOCATOR_ENABLE=1
        -DOPENTHREAD_CONFIG_TMF_NETDATA_SERVICE_ENABLE=1
        -DOPENTHREAD_CONFIG_TMF_NETDIAG_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_TX_QUEUE_STATISTICS_ENABLE=0
        -DOPENTHREAD_CONFIG_UDP_FORWARD_ENABLE=1
        -DOPENTHREAD_CONFIG_UPTIME_ENABLE=1

        # Additional features 
        -DOPENTHREAD_CONFIG_DNS_CLIENT_OVER_TCP_ENABLE=1
        -DOPENTHREAD_CONFIG_IP6_FRAGMENTATION_ENABLE=1
        -DOPENTHREAD_CONFIG_REFERENCE_DEVICE_ENABLE=1   # Test Harness
        -DOPENTHREAD_CONFIG_SRP_CLIENT_DOMAIN_NAME_API_ENABLE=1
        -DOPENTHREAD_CONFIG_BORDER_ROUTING_MOCK_PLAT_APIS_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_SOFTWARE_TX_SECURITY_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_SOFTWARE_ENERGY_SCAN_ENABLE=1
        -DOPENTHREAD_CONFIG_PLATFORM_USEC_TIMER_ENABLE=1
        -DOPENTHREAD_CONFIG_NUM_MESSAGE_BUFFERS=120
        -DOPENTHREAD_CONFIG_MLE_MAX_CHILDREN=16
    )
elseif(CONFIG_OT_DEVICE_TYPE_MTD)
    sdk_add_link_libraries(openthread-mtd)
    sdk_add_link_libraries(openthread-cli-mtd)
    option(OT_FTD "" OFF)
    option(OT_MTD "" ON)
    option(OT_RCP "" OFF)
    add_compile_options(
        -DOPENTHREAD_CONFIG_ASSERT_ENABLE=1
        -DOPENTHREAD_CONFIG_BACKBONE_ROUTER_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_AGENT_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_AGENT_ID_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_AGENT_EPHEMERAL_KEY_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_ROUTER_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_ROUTING_DHCP6_PD_ENABLE=0
        -DOPENTHREAD_CONFIG_BORDER_ROUTING_ENABLE=0
        -DOPENTHREAD_CONFIG_CHANNEL_MANAGER_ENABLE=0
        -DOPENTHREAD_CONFIG_CHANNEL_MONITOR_ENABLE=0
        -DOPENTHREAD_CONFIG_COAP_API_ENABLE=1
        -DOPENTHREAD_CONFIG_COAP_BLOCKWISE_TRANSFER_ENABLE=0
        -DOPENTHREAD_CONFIG_COAP_OBSERVE_API_ENABLE=0
        -DOPENTHREAD_CONFIG_COAP_SECURE_API_ENABLE=1
        -DOPENTHREAD_CONFIG_COMMISSIONER_ENABLE=0
        -DOPENTHREAD_CONFIG_DATASET_UPDATER_ENABLE=0
        -DOPENTHREAD_CONFIG_DHCP6_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_DHCP6_SERVER_ENABLE=0
        -DOPENTHREAD_CONFIG_DIAG_ENABLE=0      # modified
        -DOPENTHREAD_CONFIG_DNSSD_SERVER_ENABLE=0
        -DOPENTHREAD_CONFIG_DNS_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_DNS_DSO_ENABLE=0
        -DOPENTHREAD_CONFIG_DNS_UPSTREAM_QUERY_ENABLE=0
        -DOPENTHREAD_CONFIG_DUA_ENABLE=1
        -DOPENTHREAD_CONFIG_ECDSA_ENABLE=1
        -DOPENTHREAD_CONFIG_HISTORY_TRACKER_ENABLE=0
        -DOPENTHREAD_CONFIG_IP6_BR_COUNTERS_ENABLE=0
        -DOPENTHREAD_CONFIG_IP6_SLAAC_ENABLE=1
        -DOPENTHREAD_CONFIG_JAM_DETECTION_ENABLE=0
        -DOPENTHREAD_CONFIG_JOINER_ENABLE=1
        -DOPENTHREAD_CONFIG_LINK_METRICS_MANAGER_ENABLE=0
        -DOPENTHREAD_CONFIG_LINK_RAW_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_CSL_TRANSMITTER_ENABLE=0
        -DOPENTHREAD_CONFIG_MAC_CSL_RECEIVER_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_FILTER_ENABLE=1
        -DOPENTHREAD_CONFIG_MESH_DIAG_ENABLE=0
        -DOPENTHREAD_CONFIG_MESSAGE_USE_HEAP_ENABLE=0   # modified
        -DOPENTHREAD_CONFIG_MLE_DEVICE_PROPERTY_LEADER_WEIGHT_ENABLE=0
        -DOPENTHREAD_CONFIG_MLE_LINK_METRICS_INITIATOR_ENABLE=0
        -DOPENTHREAD_CONFIG_MLE_LINK_METRICS_SUBJECT_ENABLE=1
        -DOPENTHREAD_CONFIG_MLR_ENABLE=1
        -DOPENTHREAD_CONFIG_MULTIPLE_INSTANCE_ENABLE=0
        -DOPENTHREAD_CONFIG_NAT64_BORDER_ROUTING_ENABLE=0
        -DOPENTHREAD_CONFIG_NAT64_TRANSLATOR_ENABLE=0
        -DOPENTHREAD_CONFIG_NETDATA_PUBLISHER_ENABLE=0
        -DOPENTHREAD_CONFIG_PING_SENDER_ENABLE=1
        -DOPENTHREAD_CONFIG_SNTP_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_SRP_CLIENT_ENABLE=1
        -DOPENTHREAD_CONFIG_SRP_SERVER_ENABLE=0
        -DOPENTHREAD_CONFIG_TIME_SYNC_ENABLE=0
        -DOPENTHREAD_CONFIG_TMF_ANYCAST_LOCATOR_ENABLE=1
        -DOPENTHREAD_CONFIG_TMF_NETDATA_SERVICE_ENABLE=0
        -DOPENTHREAD_CONFIG_TMF_NETDIAG_CLIENT_ENABLE=0
        -DOPENTHREAD_CONFIG_TX_QUEUE_STATISTICS_ENABLE=0
        -DOPENTHREAD_CONFIG_UDP_FORWARD_ENABLE=1
        -DOPENTHREAD_CONFIG_UPTIME_ENABLE=1

        # Additional features 
        -DOPENTHREAD_CONFIG_MAC_SOFTWARE_TX_SECURITY_ENABLE=1
        -DOPENTHREAD_CONFIG_MAC_SOFTWARE_ENERGY_SCAN_ENABLE=1
        -DOPENTHREAD_CONFIG_PLATFORM_USEC_TIMER_ENABLE=1
        -DOPENTHREAD_CONFIG_NUM_MESSAGE_BUFFERS=120
    )
elseif(CONFIG_OT_DEVICE_TYPE_RCP)
    sdk_add_link_libraries(openthread-rcp)
    sdk_add_link_libraries(openthread-cli-radio)
    option(OT_FTD "" OFF)
    option(OT_MTD "" OFF)
    option(OT_RCP "" ON)
    add_compile_options(
        -DOPENTHREAD_CONFIG_MAC_SOFTWARE_TX_SECURITY_ENABLE=1
    )
endif()

add_compile_options(
    -D__int64_t_defined=1
    -Wimplicit-fallthrough=0 -Wno-switch-default
    -DOT_FREERTOS_ENABLE=1

    -DOPENTHREAD_CONFIG_PLATFORM_INFO="${CONFIG_CHIP}"
    -DOPENTHREAD_CONFIG_THREAD_VERSION=OT_THREAD_VERSION_1_4
    -DOPENTHREAD_CONFIG_LOG_LEVEL=OT_LOG_LEVEL_DEBG
    -DOPENTHREAD_CONFIG_LOG_LEVEL_INIT=OT_LOG_LEVEL_NONE
    -DOPENTHREAD_CONFIG_LOG_LEVEL_DYNAMIC_ENABLE=1

    #-DOPENTHREAD_CONFIG_NCP_CPC_ENABLE=1
    #-DOPENTHREAD_CONFIG_COPROCESSOR_RPC_ENABLE=0
)

sdk_add_subdirectory_ifdef(CONFIG_BUILD_COMPONENT_OPENTHREAD_SUBG ${CMAKE_CURRENT_LIST_DIR}/openthread)
sdk_add_subdirectory_ifdef(CONFIG_BUILD_COMPONENT_OPENTHREAD ${CMAKE_CURRENT_LIST_DIR}/openthread)
sdk_add_subdirectory_ifdef(CONFIG_BUILD_COMPONENT_OPENTHREAD_PORT ${CMAKE_CURRENT_LIST_DIR}/openthread_port)